--- a/templates/home.html
+++ b/templates/home.html
@@ -42,22 +42,21 @@
                 </div>
                 <div class="box">
                     <h3 class="text-center", style="color=#343a40;">Developer</h3>
-                    <p class="color=#343a40">The developer of this app has more than five years of experience in
-                        programing and designing electricity markets.
+                    <p class="color=#343a40">The developer of this app is a master student at 
+                        the Norwegian School of Economics.
                     </p>
 
                     <div class="card-body text-center">
-                        <img src="static/pictures/mario_square_273_273.svg"
+                        <img src="static/pictures/marthineih.jpg"
                              class="rounded-circle w-50 mb-3"
                              alt="", style="max-width: 180px; max-height: 180px"
                         />
-                        <h5 class="card-title mb-3">Mario Blázquez de Paz</h5>
-                        <p class="card-text">Mario works in energy economics with an
-                            special focus on the design of electricity markets by using theoretical
-                            models and simulations. He teaches the course Sustainable Energy at NHH,
-                            where he connects green economy, digitalization, and app development.
-                            In his research and teaching, he uses different programming languages to create apps to conduct
-                            economic analysis in the fields of energy economics and sustainability.
+                        <h5 class="card-title mb-3">Marthine Ingebrigtsen</h5>
+                        <p class="card-text">Marthine is a NHH master student with a major in Business Analysis and Performance Management (BUS)
+                            and a minor in Energy, Natural Resources and Environment (ENE). She participants in the course Sustainable Energy at NHH 
+                            the spring of 2022, which contains subjects of green economy, digitalization, and app development.  
+                            During this course, the students learn and use basic programming skills to create an app, and increases the potential 
+                            to develop the skills further.
                         </p>
                         </br>
                         <div class="container_buttons_developer">
