--- a/templates/home.html
+++ b/templates/home.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="box">
                     <h3 class="text-center", style="color=#343a40;">Developer</h3>
-                    <p class="color=#343a40">The developer of this app is a master student at 
+                    <p class="color=#343a40">The developer of this app is a master's student at 
                         the Norwegian School of Economics.
                     </p>
 
@@ -52,10 +52,10 @@
                              alt="", style="max-width: 180px; max-height: 180px"
                         />
                         <h5 class="card-title mb-3">Marthine Ingebrigtsen</h5>
-                        <p class="card-text">Marthine is a NHH master student with a major in Business Analysis and Performance Management (BUS)
+                        <p class="card-text">Marthine is a NHH master's student with a major in Business Analysis and Performance Management (BUS)
                             and a minor in Energy, Natural Resources and Environment (ENE). She participants in the course Sustainable Energy at NHH 
                             the spring of 2022, which contains subjects of green economy, digitalization, and app development.  
-                            During this course, the students learn and use basic programming skills to create an app, and increases the potential 
+                            During this course, the students learn to use basic programming skills to create an app, and increases the potential 
                             to develop the skills further.
                         </p>
                         </br>
