--- a/templates/layout.html
+++ b/templates/layout.html
@@ -136,7 +136,7 @@
         {% block content %} {% endblock %}
 
         <!-- Footer -->
-        <footer class="p-5  text-white text-center position-relative", style="background-color:#f2935c">
+        <footer class="p-5  text-white text-center position-relative", style="background-color:#eba0da">
           <div class="container">
             <p class="lead">Transport Carbon Emissions Calculator App</p>
 
