--- a/static/style_carbon.css
+++ b/static/style_carbon.css
@@ -21,7 +21,7 @@
 
             /***   Navbar   ***/
             .navbar_carbon {
-              background: #eba0da;
+              background: #edbeab;
               color: #fff;
               height: 60px;
             }
