--- a/templates/home.html
+++ b/templates/home.html
@@ -61,7 +61,7 @@
                         </br>
                         <div class="container_buttons_developer">
                            <div class="btn">
-                               <a href="static/blazquez_cv_2021.pdf"  class="btn btn-primary btn-lg mr-2", style="background-color=#007bff;">Curriculum</a>
+                               <a href="static/CV English.pdf"  class="btn btn-primary btn-lg mr-2", style="background-color=#007bff;">Curriculum</a>
                            </div>
                         </div>
                     </div>
