--- a/templates/layout.html
+++ b/templates/layout.html
@@ -119,7 +119,7 @@
             .section_caculator_entry_css .box {
               flex: 1;
               background: #f2e3b6 ;
-              color: #fff;
+              color: #343a40;
               border-radius: 10px;
               margin: 20px 10px;
               padding: 15px 20px;
@@ -128,7 +128,7 @@
             .section_caculator_entry_css .box:nth-of-type(1) {
               flex-grow:1;
               background: #fff ;
-              color: #fff;
+              color: #343a40;
               border-radius: 10px;
               margin: 0px 0px;
               padding: 0px 0px;
@@ -137,7 +137,7 @@
             .section_caculator_entry_css .box:nth-of-type(2) {
               flex-grow:5;
               background: #f2e3b6 ;
-              color: #fff;
+              color: #343a40;
               border-radius: 10px;
               margin: 20px 10px;
               padding: 15px 20px;
